[package]
name = "ants-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
deno_core = "0.277.0"
serde_json = "1.0.116"

