[package]
name = "ants-engine"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
deno_core = "0.277.0"
serde_json = "1.0.116"
serde = { version = "1.0.198", features = ["derive"] }
rand = "0.8.5"
crossbeam = "0.8.4"

